--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -94,6 +94,7 @@
     margin: 0;
     font-weight: 600;
     text-align: end;
+    background-color: transparent;
 }
 
 .filter-container{
@@ -180,6 +181,21 @@
     padding: 0;
     margin: 0;
     flex-wrap: wrap;
+}
+.filter-list-c{
+    padding: 10px 1rem;
+    border-bottom: 1px solid grey;
+}
+.filter-list-c p{
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+.category-select{
+    outline: none;
+    border: none;
+    width: 100%;
+    margin-top: 5px;
+    padding: 0;
 }
 
 @media (max-width: 576px){
