--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,6 +2,8 @@
     width: 100%;
     padding: 0.6rem 2rem;
     border-bottom: 1px solid rgb(180, 180, 180);
+    background-color: #fff;
+    position: fixed;
 }
 .nav-top-section{
     display: flex;
@@ -12,6 +14,25 @@
     margin-top: 0.4rem;
     margin-bottom: 1rem;
 }
+
+.nav-items-container .nav-link{
+    display: flex;
+    align-items: center;
+}
+
+.nav-items-container .nav-link span{
+  background-color: black;
+  border-radius: 12px;
+  padding: 2px 4px;
+  color: #fff;
+  height: 24px;
+  width: 24px;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .nav-link{
     text-decoration: none;
     color: black;
@@ -128,7 +149,7 @@
         display: none;
     }
     .toggle-logo{
-        display: inline;
+        display: flex;
         font-size: 25px;
         margin-right: 6px;
     }
