--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -55,6 +55,7 @@
     align-items: center;
     font-family: "Barlow Semi Condensed", sans-serif;
     margin: 1.5rem;
+    margin-top: 7rem;
 }
 
 .home-main-heading{
@@ -99,14 +100,15 @@
 
 .filter-container{
     position: fixed;
-    top: 1;
-    left: 1;
+    top: 0;
+    left: 0;
     width: 200px;
     z-index: 999;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.2);
     background-color: #fff;
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 .close-filter{
